<h1>Hello from the upstream repo</h1>

--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -4,6 +4,6 @@
     <title>Hello Page</title>
 </head>
 <body>
-    <h1>Hello from HTML Page</h1>
+    <h1>Hello from the upstream repo</h1>
 </body>
 </html>
