--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Hello from the upstream repo</h1>
     <h1>Hello Upstream conflicting feature</h1>
+    <h1>Hello new upstream feature</h1>
 </body>
 </html>
