--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -7,5 +7,6 @@
     <h1>Hello from the upstream repo</h1>
     <h1>Hello Upstream conflicting feature</h1>
     <h2>Hello new upstream feature</h2>
+    <h3>Hello World!!!!</h3>
 </body>
 </html>
