--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -8,5 +8,6 @@
     <h1>Hello Upstream conflicting feature</h1>
     <h2>Hello new upstream feature</h2>
     <h3>Hello World!!!!</h3>
+    <h3>drift</h3>
 </body>
 </html>
