--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -9,5 +9,6 @@
     <h2>Hello new upstream feature</h2>
     <h3>Hello World!!!!</h3>
     <h3>drift with me one more time</h3>
+    <h3>drift with me one more time again</h3>
 </body>
 </html>
