--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -4,6 +4,7 @@
     <title>Hello Page</title>
 </head>
 <body>
+    <h1>Release 0.2</h1>
     <h1>Hello from the upstream repo</h1>
     <h1>Hello Upstream conflicting feature</h1>
     <h2>Hello new upstream feature</h2>
