--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -7,6 +7,7 @@
     <h1>main branch with fix</h1>
     <h1>Hello from the upstream repo</h1>
     <h1>Hello Upstream conflicting feature</h1>
+    <h1>Fast Forward</h1>
     <h2>Hello new upstream feature</h2>
     <h3>Hello World!!!!</h3>
     <h3>drift with me one more time</h3>
