--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -8,6 +8,6 @@
     <h1>Hello from the upstream repo</h1>
     <h1>Hello Upstream conflicting feature</h1>
     <h1>Fast Forward and rebase with approve at the end</h1>
-    Some thing here!!
+    Some thing here!!!
 </body>
 </html>
