--- a/my-app.Service/wwwroot/hello.html
+++ b/my-app.Service/wwwroot/hello.html
@@ -9,5 +9,6 @@
     <h1>Hello Upstream conflicting feature</h1>
     <h1>Fast Forward and rebase with approve at the end</h1>
     Something here!!!!!
+    Something there!!!!!
 </body>
 </html>
